<resources>
    <string name="app_name">BustIT</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search_by">Search By:</string>
    <string name="username">Username</string>
    <string name="tweet">Tweet</string>
    <string name="at">\@khajuria_sanket</string>
    <string name="hashtag">Hashtag</string>
    <string name="search">Search</string>
    <string name="enter_search_text">Enter Search Text</string>
    <string name="click_for_link">Click here to view the tweet on twitter</string>
</resources>