<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintCircleRadius="30dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_by"
        android:id="@+id/text"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/text">

        <RadioButton
            android:id="@+id/rd_hashtag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hashtag" />

        <RadioButton
            android:id="@+id/rd_tweet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tweet" />

        <RadioButton
            android:id="@+id/rd_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username" />

    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/radioGroup"
        android:layout_marginBottom="20dp"

        android:id = "@+id/search_text"
        android:hint = "@string/enter_search_text"
        />

    <Button
        android:id="@+id/dialog_search_button"
        android:layout_width="wrap_content"
        android:layout_below="@id/search_text"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:text="@string/search" />
</RelativeLayout>


</LinearLayout>